@@ -88,5 +88,37 @@
             Assert.IsInstanceOfType(result, typeof(string));
             Assert.AreEqual("Adam", result);
         }
+
+        [TestMethod]
+        public void InvokeNativeMethod()
+        {
+            ICommand body = new ReturnCommand(new VariableExpression("Name"));
+            Function function = new Function(null, body);
+
+            Assert.AreEqual(0, function.Arity);
+
+            dynobj.SetValue("Name", "Adam");
+
+            object result = dynobj.Invoke("GetValue", new object[] { "Name" });
+
+            Assert.IsNotNull(result);
+            Assert.IsInstanceOfType(result, typeof(string));
+            Assert.AreEqual("Adam", result);
+        }
+
+        [TestMethod]
+        public void DetectNativeMethods()
+        {
+            Assert.IsTrue(this.dynobj.IsNativeMethod("ToString"));
+            Assert.IsTrue(this.dynobj.IsNativeMethod("GetHashCode"));
+            Assert.IsTrue(this.dynobj.IsNativeMethod("Equals"));
+
+            Assert.IsTrue(this.dynobj.IsNativeMethod("GetValue"));
+            Assert.IsTrue(this.dynobj.IsNativeMethod("SetValue"));
+            Assert.IsTrue(this.dynobj.IsNativeMethod("GetNames"));
+            Assert.IsTrue(this.dynobj.IsNativeMethod("Invoke"));
+
+            Assert.IsFalse(this.dynobj.IsNativeMethod("Foo"));
+        }
     }
 }
