@@ -88,6 +88,12 @@
     <None Include="Examples\AgentCall.ajs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Examples\DefaultMethodLoadBalancer.ajs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Examples\DefaultMethodProxy.ajs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Examples\FunctionalCall.ajs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
